fix(footer): alignment

--- a/src/components/global/footer/footer.scss
+++ b/src/components/global/footer/footer.scss
@@ -8,7 +8,7 @@
 .footer {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 24px;
   padding: 24px 32px;
   border-radius: 8px;
   margin: 0 var(--kd-page-gutter) 8px;
@@ -17,7 +17,8 @@
 
   @media (min-width: 42rem) {
     flex-direction: row;
-    align-items: center;
+    // align-items: center;
+    gap: 16px;
   }
 }
 
@@ -29,8 +30,6 @@
 }
 
 .logo-container {
-  padding: 10px 0;
-
   @media (min-width: 42rem) {
     margin-left: auto;
   }
